testing/tests/ui/macro-super.stderr
error: `super` is not a valid name for a macro
 --> <source attribute>:1:10
       "super() -%}{%- endmacro -%}"
 --> tests/ui/macro-super.rs:4:21
  |
4 | #[template(source = "{%- macro super() -%}{%- endmacro -%}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
